@@ -1,5 +1,8 @@
 iowow (1.4.8) UNRELEASED; urgency=medium
 
+  * Fixed potencial memory leak in `iwlist_create()` (iwarr.h)
+  * Fixed wrong `iwulist_clear()` behaviour (iwarr.h)
+  * Code cleanup
   * Added `iwulist_at2()` (iwarr.h)
 
  -- Anton Adamansky <adamansky@gmail.com>  Tue, 22 Sep 2020 10:56:09 +0700
